--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -1,14 +1,14 @@
 ---
-import { Icon } from 'astro-icon'
+import IconLink from "./IconLink.astro";
 ---
 
 <div class="socials-container">
-    <Icon name="mail" link="/contact"/>
-    <Icon name="ra" link="https://ra.co/dj/cqqchifruit" />
-    <Icon name="instagram" link="https://www.instagram.com/cqqchifruit/" />
-    <Icon name="soundcloud" link="https://soundcloud.com/user-670053096" />
-    <Icon name="facebook" link="https://www.facebook.com/CQQCHIFRUIT/"/>       
-    <Icon name="mixcloud" link="https://www.mixcloud.com/cqqchifruit/" />
+    <IconLink name="mail" link="/contact"/>
+    <IconLink name="ra" link="https://ra.co/dj/cqqchifruit" />
+    <IconLink name="instagram" link="https://www.instagram.com/cqqchifruit/" />
+    <IconLink name="soundcloud" link="https://soundcloud.com/user-670053096" />
+    <IconLink name="facebook" link="https://www.facebook.com/CQQCHIFRUIT/"/>       
+    <IconLink name="mixcloud" link="https://www.mixcloud.com/cqqchifruit/" />
 </div>
 <style is:global>
 	.socials-container {
