back to where we were

--- a/src/components/LandingPageVideo.astro
+++ b/src/components/LandingPageVideo.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<video src="/src/content/videos/PROYECCION_clip.mov" autoplay muted>
+<video src="/src/content/videos/PROYECCION_clip.mov" autoplay muted loop>
 </video>
 <style>
     video {
