--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import LandingPageVideo from "../components/LandingPageVideo.astro";
 import SocialLinks from "../components/SocialLinks.astro";
 ---
@@ -7,6 +8,9 @@ import SocialLinks from "../components/SocialLinks.astro";
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Revalia&family=Turret+Road:wght@300&family=Zen+Loop&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>CQQCHIFRUIT</title>
@@ -14,6 +18,30 @@ import SocialLinks from "../components/SocialLinks.astro";
 	<body>
         <LandingPageVideo />
         <SocialLinks />
-		<h1>CQQCHIFRUIT</h1>
+        <div class="main-container">
+            <h1>CQQCHIFRUIT</h1>
+            <!-- <Footer /> -->
+        </div>
 	</body>
 </html>
+<style>
+    body {
+        overflow-y: hidden;
+    }
+    .main-container {
+        display: flex;
+        position: absolute;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+    }
+    h1 {
+        position: relative;
+        top: 35%;
+        color: white;
+        font-family: Gugi;
+        font-size: 3rem;
+    }
+</style>
