test removing facebook

--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -7,7 +7,7 @@ import IconLink from "./IconLink.astro";
     <IconLink name="ra" link="https://ra.co/dj/cqqchifruit" />
     <IconLink name="instagram" link="https://www.instagram.com/cqqchifruit/" />
     <IconLink name="soundcloud" link="https://soundcloud.com/user-670053096" />
-    <IconLink name="facebook" link="https://www.facebook.com/CQQCHIFRUIT/"/>       
+    <!-- <IconLink name="facebook" link="https://www.facebook.com/CQQCHIFRUIT/"/>        -->
     <IconLink name="mixcloud" link="https://www.mixcloud.com/cqqchifruit/" />
 </div>
 <style is:global>
