--- a/src/components/LandingPageVideo.astro
+++ b/src/components/LandingPageVideo.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<video src="/src/content/videos/PROYECCION_clip.mov" autoplay muted loop>
+<video src="https://ik.imagekit.io/vpvecpntw/PROYECCION_purple.mov" autoplay muted loop>
 </video>
 <style>
     video {
