--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -15,6 +15,8 @@ import IconLink from "./IconLink.astro";
 	    display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
+        z-index: 5;
 	}
     a {
         margin-right: 10px;
