--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,3 +2,16 @@
 ---
 
 <footer>© 2023 Jacquelyn Carmen Guerrero. All rights reserved.</footer>
+<style>
+	footer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        color: white;
+        font-family: Gugi;
+        font-size: 12px;
+        width: 100%;
+        text-align: center;
+        padding: 15px 0;
+    }
+</style>
