--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import SocialLinks from "../components/SocialLinks.astro";
         <SocialLinks />
         <div class="main-container">
             <h1>CQQCHIFRUIT</h1>
-            <!-- <Footer /> -->
         </div>
+        <Footer />
 	</body>
 </html>
 <style>
