--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -17,6 +17,7 @@ import IconLink from "./IconLink.astro";
         align-items: center;
         position: relative;
         z-index: 5;
+        top: 1rem;
 	}
     a {
         margin-right: 10px;
