--- a/src/components/LandingPageVideo.astro
+++ b/src/components/LandingPageVideo.astro
@@ -12,4 +12,10 @@
         min-height: 100%;
         z-index: -1;
     }
+
+    @media screen and (max-width: 450px) {
+        video {
+            height: auto;
+        }
+    }
 </style>
