--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import SocialLinks from "../components/SocialLinks.astro";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Revalia&family=Turret+Road:wght@300&family=Zen+Loop&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Revalia" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>CQQCHIFRUIT</title>
@@ -29,22 +29,23 @@ import SocialLinks from "../components/SocialLinks.astro";
         overflow-y: hidden;
         animation: fade-in 2s linear;
         background-color: black;
+        height: 100vh;
     }
     .main-container {
         display: flex;
-        position: absolute;
         justify-content: center;
+        align-items: center;
         width: 100%;
-        height: 100%;
+        height: auto;
         top: 0;
         right: 0;
     }
     h1 {
         position: relative;
-        top: 35%;
         color: white;
         font-family: Gugi;
         font-size: 3rem;
+        top: 30vh;
     }
     @keyframes fade-in {
         0% {
